--- a/SMS.Web/Views/BringIn/Detail.cshtml
+++ b/SMS.Web/Views/BringIn/Detail.cshtml
@@ -54,7 +54,7 @@
             <!--Ảnh profile-->
             <div class="form-group col-12 profile-img">
                 <div class="img-profile">
-                    <img src="~/Assets/img/the-world.jpg" />
+                    <img id="img-profile" src="~/Assets/img/the-world.jpg" />
                 </div>
             </div>
             <!--Thông tin profile-->
@@ -185,6 +185,7 @@
     </div>
 </div>
 @section scripts{
+    <script src="~/Assets/js/bring_in/common.js"></script>
     <script>
         $("#return-history").on("click", () => {
             window.location.href = "/BringIn/History"
