--- a/SMS.Web/Views/Guest/History.cshtml
+++ b/SMS.Web/Views/Guest/History.cshtml
@@ -97,7 +97,7 @@
                 "lengthChange": false,
                 "ajax": {
                     "type": "POST",
-                    "url": "/Guest/FetchGuestData",
+                    "url": "/Guest/FetchGuestDataHistory",
                     "dataType": "json",
                     "contentType": 'application/json; charset=utf-8',
                     "dataSrc": function (res) {
