--- a/SMS.Web/Views/Guest/FSTApprove.cshtml
+++ b/SMS.Web/Views/Guest/FSTApprove.cshtml
@@ -92,7 +92,7 @@
                 "lengthChange": false,
                 "ajax": {
                     "type": "POST",
-                    "url": "/Guest/FetchGuestData",
+                    "url": "/Guest/FetchGuestData?type=FST",
                     "dataType": "json",
                     "contentType": 'application/json; charset=utf-8'
                 },
